Changelog
=========

1.0.1 - November 20, 2013
-------------------------

- Adds dynatree jquery plugin. Upgrade step 1100.
  [Cesar Gonzalez]

- Adds vocabualry utility.
  [Jose DInuncio]

- Add more js scripts for stream and casts.
  [Vitaliy Podoba]

1.0.0 - October 24, 2013
------------------------

- Add jquery selection field js plugin.
  [Vitaliy Podoba]

- Adds search keywords.
  [Jose Dinuncio]

- Adds custom event for portlet loading complete.
  [Cesar Gonzalez]

- Attach portlet buttons when deferred porlets are complete
  [Cesar Gonzalez]

- Initial release.