@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <object name="portal_css">
+ <stylesheet title=""
+    id="++resource++vnccollab.common.css/main.css"
+    media="screen" rel="stylesheet" rendering="link"
+    cacheable="True" compression="safe" cookable="True"
+    enabled="1" expression=""/>
   <stylesheet title=""
     id="++resource++vnccollab.common.css/ui.dynatree.css"
     media="screen" rel="stylesheet" rendering="link"
