@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1100</version>
+  <version>1101</version>
   <dependencies>
     <dependency>profile-collective.js.jqueryui:default</dependency>
   </dependencies>
