@@ -4,6 +4,9 @@ Changelog
 1.0.1 - November 20, 2013
 -------------------------
 
+- Adds missing images of dynatree jquery plugin. Adds main.js resource [9049].
+  [Cesar Gonzalez]
+
 - Adds dynatree jquery plugin. Upgrade step 1100.
   [Cesar Gonzalez]
 
